added tag controller
