# src/controllers/tag.controller.ts
@@ -4,10 +4,6 @@ import { success, error } from '../utils/response';
 
 class BlogsController {
   protected tagService = new TagService();
-  protected pagination = {
-    page: 1,
-    limit: 10,
-  };
 
   public getTags = async (req: Request, res: Response) => {
     try {
@@ -15,18 +11,18 @@ class BlogsController {
 
       return success(res, tags);
     } catch (err) {
-      return error(res, err.message, 500);
+      return error(res, err.message, err.status);
     }
   };
 
   public getTagById = async (req: Request, res: Response) => {
     try {
-      const tagId = Number(req.params.id);
+      const tagId = req.params.id;
       const tag = await this.tagService.findById(tagId);
 
       return success(res, tag);
     } catch (err) {
-      return error(res, err.message, 500);
+      return error(res, err.message, err.status);
     }
   };
 
@@ -37,29 +33,29 @@ class BlogsController {
 
       return success(res, createdTagData);
     } catch (err) {
-      return error(res, err.message, 500);
+      return error(res, err.message, err.status);
     }
   };
 
   public updateTag = async (req: Request, res: Response) => {
     try {
-      const tagId = Number(req.params.id);
+      const tagId = req.params.id;
       const requests = req.body;
       const updatedTagData = await this.tagService.update(tagId, requests);
       return success(res, updatedTagData);
     } catch (err) {
-      return error(res, err.message, 500);
+      return error(res, err.message, err.status);
     }
   };
 
   public deleteTag = async (req: Request, res: Response) => {
     try {
-      const tagId = Number(req.params.id);
+      const tagId = req.params.id;
       await this.tagService.delete(tagId);
 
       return success(res, 'Tag deleted successfully!');
     } catch (err) {
-      return error(res, err.message, 500);
+      return error(res, err.message, err.status);
     }
   };
 }
